Forgot to fix the title line spacing, so here is that.

--- a/stylesheets/markdown.css
+++ b/stylesheets/markdown.css
@@ -19,7 +19,7 @@
   font-size: 2em;
   font-weight: bold;
   color: inherit;
-  line-height: 20%;
+  line-height: 98%;
 }
 
 .markdown_list_title
